--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -39,27 +39,29 @@ a {
   }
 }
 
-//  STANDARD TEXT - IMAGE
-figure.basic-img {
-  text-align: center;
-  margin: 2em 0;
-
-  img {
-    @include set-theme-colors(background-color, img-placeholder);
-    height: 40vw;
-
-    @media all and (min-width: $min-width-breakpoint-xl) {
-      height: 600px;
-    }
-  }
-}
-
 //  STANDARD TEXT - FIGURE and CAPTION
 figure {
   margin: 0;
 
   figcaption {
     font-style: italic;
+  }
+}
+
+//  STANDARD TEXT - IMAGE
+figure.basic-img {
+  margin: 2em 0;
+
+  img {
+    @include set-theme-colors(background-color, img-placeholder);
+    height: 40vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media all and (min-width: $min-width-breakpoint-xl) {
+      height: 600px;
+    }
   }
 }
 
